--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,3 +32,9 @@ a.nav-link {
     font-family: 'Libre Baskerville', serif;
     font-size: 1.5rem;
 }
+
+.score-line {
+    margin-bottom: 0;
+    font-size: .8rem;
+    font-weight: 700;
+}
