--- a/src/css/main.css
+++ b/src/css/main.css
@@ -33,7 +33,7 @@ a.nav-link {
     font-size: 1.5rem;
 }
 
-.score-line {
+.box-score-item {
     margin-bottom: 0;
     font-size: .8rem;
     font-weight: 700;
