--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,32 +1,43 @@
 html {
-    height: 100%;
+  height: 100%;
 }
 
 body {
-    background-color: rgba(65, 179, 12, 0.685);
-    cursor: default;
-    font-size: 62.5%;
+  background-color: rgba(236, 236, 236, 0.685);
+  cursor: default;
+  font-size: 62.5%;
 }
 
 img {
-    height: auto;
-    width: 100%;
-}   
+  height: auto;
+  width: 100%;
+}
 
 a.nav-link {
+  background-color: rgb(72, 211, 102);
+  font-family: "Libre Baskerville", serif;
+  font-size: 1.5rem;
+}
 
-    background-color: rgb(72, 211, 102);
-    font-family: 'Libre Baskerville', serif;
-    font-size: 1.5rem;
+.flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .box-score-item {
-    margin-bottom: 0;
-    font-size: .8rem;
-    font-weight: 700;
-    width: 250px;
+  margin-bottom: 0;
+  font-size: 0.8rem;
+  font-weight: 700;
+  width: 250px;
+}
+.box-score {
+  margin-left: 10px;
+  font-size: 0.8rem;
+  font-weight: 700;
+  width: 250px;
 }
 
 .is-completed {
-    color: rgb(245, 45, 45);
+  color: rgb(245, 45, 45);
 }
