--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,19 +25,33 @@ a.nav-link {
   flex-wrap: wrap;
 }
 
-.box-score-item {
+.box-score-status {
   margin-bottom: 0;
   font-size: 0.8rem;
   font-weight: 700;
-  width: 250px;
+  
 }
-.box-score {
-  margin-left: 10px;
-  font-size: 0.8rem;
-  font-weight: 700;
-  width: 250px;
-}
+
+  .box-score-team {
+    margin-bottom: 0;
+    font-size: 0.8rem;
+    font-weight: 700;
+  }
+  .box-score-inning {
+    margin-left: 2px;
+    font-size: 0.8rem;
+    font-weight: 700;
+  }
+  .box-score-final {
+    margin-left: 10px;
+    font-size: 0.8rem;
+    font-weight: 700;
+  }
 
 .is-completed {
   color: rgb(245, 45, 45);
+}
+
+.home-won {
+  color: goldenrod;
 }
