--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,8 +13,30 @@ img {
   width: 100%;
 }
 
+/* Tab Interface Styling */
+.tab-button {
+  padding: 6px 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  border: 1px solid #ccc;
+  cursor: pointer;
+  background: #f0f0f0;
+  margin-bottom: -1px;
+  margin-right: -1px;
+}
+.tab-button:hover {
+  background: #e0e0e0;
+}
+.tab-button.active {
+  background: #e0e0e0;
+}
+.tab {
+  border: 1px solid #ccc;
+  padding: 10px;
+}
+/* End Tab Stylings */
+
 a.nav-link {
-  background-color: rgba(87, 212, 243, 0.7);
   font-family: "Libre Baskerville", serif;
   font-size: 1.5rem;
 }
