--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,14 @@ img {
   height: auto;
   width: 100%;
 }
+  img[src="./src/img/nyy.png"] {
+    width: 40px;
+    display: inline-block;
+  }
+  img[src="./src/img/nym.png"] {
+    width: 40px;
+  }
+ 
 
 /* Tab Interface Styling */
 .tab-button {
@@ -41,20 +49,20 @@ a.nav-link {
   font-size: 1.5rem;
 }
 
-.flex-container-scores {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-}
-  .flex-container-standings {
-    display: flex;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    margin-top: 30px;
-  }
+
+
+  
 .division-name {
-  font-size: 28px;
+  color: #5a7ba6;
+  font-size: 16px;
+  margin-top: 30px;
 }
+  .division-name table {
+    all: initial;
+  }
+  th {
+    font-size: .8rem;
+  }
 
 
 .box-score-status {
