--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,15 +6,22 @@ body {
   background-color: rgba(245, 245, 245, 0.2);
   cursor: default;
   font-size: 62.5%;
+  
 }
 
 h1 {
   font-family: "Abril Fatface", cursive;
+  font-size: 2rem;
 }
 h2,
 h3 {
   font-family: "Abril Fatface", cursive;
+  font-size: 1.5rem;
   font-weight: 800;
+}
+
+.test12 {
+  font-size: 12px;
 }
 
 img {
@@ -42,17 +49,17 @@ img[src="./src/img/bro.png"] {
 img[src="./src/img/NFL.png"] {
   display: block;
   margin: 0 auto;
-  width: 25vw;
+  width: 12vw;
 }
 img[src="./src/img/MLB.png"] {
   display: block;
   margin: 0 auto;
-  width: 25vw;
+  width: 12vw;
 }
 img[src="./src/img/NBA.png"] {
   display: block;
   margin: 0 auto;
-  width: 25vw;
+  width: 12vw;
 }
 
 /* Tab Interface Styling */
