--- a/src/css/main.css
+++ b/src/css/main.css
@@ -143,7 +143,7 @@ team-logo {
 
 .location {
   background: rgba(196, 212, 235, 0.5);
-  font-size: .8rem;
+  font-size: 0.8rem;
 }
 
 .inning-or-quarter-score {
@@ -169,18 +169,41 @@ team-logo {
   color: goldenrod;
 }
 
+/* ============== To Arrow Top Stylings ================================= */
+.back-to-top {
+  background: none;
+  border-radius: 50%;
+  margin: 0;
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 70px;
+  height: 70px;
+  z-index: 99;
+  /* display: none; */
+  text-decoration: none;
+  color: #ffffff;
+  background-color: rgba(195,220,236,0.9);
+}
+  .back-to-top:hover {
+    background-color:rgba(195,220,236,0.7);
+  }
+  .back-to-top i {
+    font-size: 60px;
+  }
+
 /* ========== Media Queries Below Here ================ */
 
 @media only screen and (max-width: 400px) {
   /* For mobile phones: */
   #app {
-      margin-top: 25px;
+    margin-top: 25px;
   }
 }
 
 @media only screen and (min-width: 401px) and (max-width: 700px) {
   /* For mobile phones: */
   #app {
-      margin-top: 50px;
+    margin-top: 50px;
   }
 }
