--- a/src/css/main.css
+++ b/src/css/main.css
@@ -169,28 +169,38 @@ team-logo {
   color: goldenrod;
 }
 
-/* ============== To Arrow Top Stylings ================================= */
-.back-to-top {
-  background: none;
-  border-radius: 50%;
-  margin: 0;
+/* ============== backToTop Stylings ================================= */
+.goTop {
+  border-radius: 5px;
+  background-color: #010e1b;
+  background-color: rgba(1, 14, 27, 0.7);
   position: fixed;
-  bottom: 0;
-  right: 0;
-  width: 70px;
-  height: 70px;
-  z-index: 99;
-  /* display: none; */
-  text-decoration: none;
-  color: #ffffff;
-  background-color: rgba(195,220,236,0.9);
+  width: 45px;
+  height: 45px;
+  display: block;
+  right: 15px;
+  bottom: 15px;
+  border: none;
+  opacity: 0;
+  z-index: -1;
 }
-  .back-to-top:hover {
-    background-color:rgba(195,220,236,0.7);
-  }
-  .back-to-top i {
-    font-size: 60px;
-  }
+.goTop .fa {
+  color: white;
+  font-size: 22px;
+}
+.goTop:hover {
+  opacity: 1;
+  background-color: #010e1b;
+  background-color: rgba(1, 14, 27, 0.9);
+}
+
+.isVisible {
+  opacity: 0.8;
+  z-index: 4;
+  transition: all 0.4s ease-in;
+}
+/*========== End backToTop Stylings ============== */
+
 
 /* ========== Media Queries Below Here ================ */
 
