--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,15 +146,19 @@ team-logo {
   font-size: 0.8rem;
 }
 
+.loading {
+  font-size: 1.5rem;
+}
+
 .inning-or-quarter-score {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Lora", sans-serif;
   font-size: 0.8rem;
   font-weight: 700;
   margin-left: 2px;
   text-shadow: 2px 2px 8px rgba(255, 255, 255, 0.9);
 }
 .box-score-final {
-  font-family: "Anton", sans-serif;
+  font-family: "Lora", sans-serif;
   font-size: 0.8rem;
   font-weight: 700;
   margin-left: 10px;
@@ -171,12 +175,12 @@ team-logo {
 
 /* ============== backToTop Stylings ================================= */
 .goTop {
-  border-radius: 5px;
+  border-radius: 50%;
   background-color: #010e1b;
   background-color: rgba(1, 14, 27, 0.7);
   position: fixed;
-  width: 45px;
-  height: 45px;
+  width: 65px;
+  height: 65px;
   display: block;
   right: 15px;
   bottom: 15px;
@@ -186,7 +190,7 @@ team-logo {
 }
 .goTop .fa {
   color: white;
-  font-size: 22px;
+  font-size: 40px;
 }
 .goTop:hover {
   opacity: 1;
@@ -196,7 +200,7 @@ team-logo {
 
 .isVisible {
   opacity: 0.8;
-  z-index: 4;
+  z-index: 99;
   transition: all 0.4s ease-in;
 }
 /*========== End backToTop Stylings ============== */
