--- a/src/css/main.css
+++ b/src/css/main.css
@@ -176,6 +176,7 @@ team-logo {
 .footer {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   font-family: "Lora", sans-serif;
   font-size: 1.2rem;
   position: fixed;
@@ -187,9 +188,13 @@ team-logo {
   
 }
   div .footer a {
-    color:rgba(255, 255, 255, 0.6);
+    color:rgb(0, 0, 0);
     text-decoration: none; 
   }
+    div .footer a img {
+      width: 50px;
+      margin-left: 7px;
+    }
 
 /* ============== backToTop Stylings ================================= */
 .goTop {
