--- a/src/css/main.css
+++ b/src/css/main.css
@@ -185,16 +185,24 @@ team-logo {
   width: 100%;
   height: 5%;
   background-color: rgba(4, 69, 129, 0.925);
-  
 }
-  div .footer a {
-    color:rgb(0, 0, 0);
-    text-decoration: none; 
-  }
-    div .footer a img {
-      width: 50px;
-      margin-left: 7px;
-    }
+div .footer a {
+  color: rgba(171, 200, 245, 0.8);
+  text-decoration: none;
+  transition: all 0.5s;
+  width: 15%;
+}
+div .footer a[href="https://www.mlb.com"]:hover,
+    div .footer a[href="https://www.nfl.com"]:hover,
+    div .footer a[href="https://www.nba.com"]:hover {
+  font-size: 1.3rem;
+  color: rgba(171, 200, 245, 0.5);
+}
+div .footer a img {
+  width: 50px;
+  max-height: 35px;
+  margin-left: 7px;
+}
 
 /* ============== backToTop Stylings ================================= */
 .goTop {
@@ -241,5 +249,28 @@ team-logo {
   /* For mobile phones: */
   #app {
     margin-top: 50px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  /* For mobile phones: */
+  .footer {
+    font-size: 0.7rem;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  div .footer a img {
+    width: 20px;
+    max-height: 20px;
+    margin-left: 4px;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  div .footer a[href="https://www.mlb.com"]:hover,
+    div .footer a[href="https://www.nfl.com"]:hover,
+    div .footer a[href="https://www.nba.com"]:hover {
+    font-size: 0.75rem;
   }
 }
