--- a/src/css/main.css
+++ b/src/css/main.css
@@ -174,17 +174,17 @@ team-logo {
 }
 
 .footer {
-  display: flex;
-  justify-content: space-evenly;
   align-items: center;
+  background-color: rgba(4, 69, 129, 0.925);
+  bottom: 0;
+  display: flex;
   font-family: "Lora", sans-serif;
   font-size: 1.2rem;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
   height: 5%;
-  background-color: rgba(4, 69, 129, 0.925);
+  justify-content: space-evenly;
+  left: 0;
+  position: fixed;
+  width: 100%;
 }
 div .footer a {
   color: rgba(171, 200, 245, 0.8);
@@ -195,28 +195,28 @@ div .footer a {
 div .footer a[href="https://www.mlb.com"]:hover,
     div .footer a[href="https://www.nfl.com"]:hover,
     div .footer a[href="https://www.nba.com"]:hover {
-  font-size: 1.3rem;
   color: rgba(171, 200, 245, 0.5);
+  font-size: 1.3rem;
 }
 div .footer a img {
-  width: 50px;
-  max-height: 35px;
   margin-left: 7px;
+  max-height: 35px;
+  width: 50px;
 }
 
 /* ============== backToTop Stylings ================================= */
 .goTop {
-  border-radius: 50%;
   background-color: #010e1b;
   background-color: rgba(1, 14, 27, 0.7);
-  position: fixed;
-  width: 65px;
-  height: 65px;
-  display: block;
-  right: 20px;
-  bottom: 45px;
   border: none;
+  border-radius: 50%;
+  bottom: 45px;
+  display: block;
+  height: 65px;
   opacity: 0;
+  position: fixed;
+  right: 20px;
+  width: 65px;
   z-index: -1;
 }
 .goTop .fa {
@@ -224,15 +224,15 @@ div .footer a img {
   font-size: 40px;
 }
 .goTop:hover {
-  opacity: 1;
   background-color: #010e1b;
   background-color: rgba(1, 14, 27, 0.9);
+  opacity: 1;
 }
 
 .isVisible {
   opacity: 0.8;
-  z-index: 99;
   transition: all 0.4s ease-in;
+  z-index: 99;
 }
 /*========== End backToTop Stylings ============== */
 
@@ -252,25 +252,32 @@ div .footer a img {
   }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) {
   /* For mobile phones: */
   .footer {
     font-size: 0.7rem;
   }
 }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) {
   div .footer a img {
-    width: 20px;
-    max-height: 20px;
     margin-left: 4px;
+    max-height: 20px;
+    width: 20px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  div .footer a[href="https://www.mlb.com"]:hover,
+  div .footer a[href="https://www.nfl.com"]:hover,
+  div .footer a[href="https://www.nba.com"]:hover {
+  font-size: 0.75rem;
   }
 }
 
 @media only screen and (max-width: 500px) {
-  div .footer a[href="https://www.mlb.com"]:hover,
-  div .footer a[href="https://www.nfl.com"]:hover,
-  div .footer a[href="https://www.nba.com"]:hover {
-    font-size: 0.75rem;
+  .goTop {
+    height: 55px;
+    width: 55px;
   }
 }
