--- a/src/css/main.css
+++ b/src/css/main.css
@@ -161,6 +161,13 @@ th.season-stats-headers {
 th.col-12 {
   background-color: #cfdcf8af;
 }
+th.category-header {
+  height: .6rem;
+  font-size: .6rem;
+  vertical-align: text-top;
+  padding-bottom: 20px;
+  background-color: rgba(162, 207, 245, 0.9);
+}
 
 tr {
   margin-bottom: 2px;
