--- a/src/css/main.css
+++ b/src/css/main.css
@@ -224,6 +224,7 @@ td[title="Click for Season Stats"]:hover {
   font-size: 0.8rem;
   font-weight: 700;
   margin-bottom: 0;
+  color: #010e1b;
 }
 
 .btn-group-sm > .btn,
