--- a/src/css/main.css
+++ b/src/css/main.css
@@ -29,6 +29,7 @@ h3 {
   font-size: 1.5rem;
   font-weight: 800;
   text-shadow: 4px 4px 4px rgba(255, 255, 255, 0.9);
+  text-align: center;
 }
 
 img {
