--- a/src/css/main.css
+++ b/src/css/main.css
@@ -100,11 +100,10 @@ img[src="./src/img/NBA.png"] {
 
 #app {
   margin-bottom: 5%;
-  margin-top: 200px;
+  margin-top: 35%;
 }
 
 /* Tab Interface Styling */
-
 .tab-button {
   background: rgba(1, 51, 105, 0.6);
   border: 1px solid rgb(22, 50, 126);
@@ -113,7 +112,7 @@ img[src="./src/img/NBA.png"] {
   cursor: pointer;
   font-size: 1.5rem;
   font-weight: 700;
-  margin: 5px 10px;
+  margin: 25px 10px;
   padding: 6px 10px;
 }
 .tab-button:first-child {
