--- a/src/css/main.css
+++ b/src/css/main.css
@@ -25,7 +25,7 @@ h1 {
     0 0 20px rgba(4, 4, 4, 0.8), 0 0 30px rgba(4, 4, 4, 0.8),
     0 0 40px rgba(4, 4, 4, 0.8), 0 0 50px rgba(4, 4, 4, 0.8),
     0 0 75px rgba(4, 4, 4, 0.8);
-    text-align: center;
+  text-align: center;
 }
 
 h2,
@@ -47,11 +47,24 @@ h4 {
 }
 
 /* Navbar Stylings */
+#bootstrap-overrides .navbar-brand {
+ font-size: 1rem;
+}
+
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav > .nav-link,
 .navbar-dark .navbar-brand,
 .navbar-dark .navbar-nav .nav-link {
-  font-size: 1.1rem;
+  font-size: 0.6rem;
+}
+
+#bootstrap-overrides .dropdown-item {
+  font-size: 0.7rem;
+  transition: 0.3s;
+}
+#bootstrap-overrides .dropdown-item:hover {
+  color: #6583a4;
+  font-size: 0.6rem;
 }
 /* End Navbar */
 
