--- a/src/css/main.css
+++ b/src/css/main.css
@@ -128,6 +128,10 @@ img[src="./src/img/NBA.png"] {
   margin-bottom: 5%;
   margin-top: 35%;
 }
+/* For pages other then the front page */
+section:not(#front-page) {
+  margin-top: -25%;
+}
 
 /* Tab Interface Styling */
 .tab-button {
